# MineCraftCPP

./: .gitignore  CMakeLists.txt  README.md
.claude/memory/: 6327728b-2263-4640-912a-fcfcc2290d5c.jsonl  a188f615-691d-4860-b2ef-611d92a2c7c9.jsonl  c25c8d71-4374-4808-8f93-8b761a4778d4.jsonl
.claude/memory/memory/: MEMORY.md  minecraftcpp-project.md
add-later/models/block/: _list.json
assets/anim/clips/: fall.clip.json  jump_run.clip.json  jump_stand.clip.json  land.clip.json  loco_idle.clip.json  loco_run.clip.json  loco_walk.clip.json  test_walk.clip.json  wave.clip.json
assets/anim/graphs/: player.graph.json
assets/lang/: en_us.json  pt_pt.json
assets/models/entity/: model.geo.json  player.json
assets/textures/blocks/: .gitkeep
assets/textures/items/: .gitkeep
claude/: settings.local.json
claude/memory/: 8ddfaa6a-0966-4ad9-adf6-0f9d30876b80.jsonl
claude/plans/: i-want-you-to-peaceful-oasis.md  please-read-the-whole-elegant-parasol.md
claude/projects/: 518338cd-b516-446f-a14e-372d52ceecfc.jsonl
claude/projects/cbb7935b-588e-4f3b-ac97-25d32ddf69d3/tool-results/: b81uf37t2.txt
claude/projects/memory/: box3d-reference.md
docs/: animation.md
shaders/: chunk.frag  chunk.vert  crack.frag  crack.vert  held.frag  held.vert  icon.vert  lod.frag  lod.vert  model.frag  model.vert  outline.frag  outline.vert  panorama.frag  panorama.vert  rain.frag  rain.vert  sky.frag  sky.vert  triangle.vert  ui.frag  ui.vert
src/: main.cpp
src/anim/: AnimChannel.cpp  AnimChannel.h  AnimClip.cpp  AnimClip.h  AnimGraph.cpp  AnimGraph.h  AnimStateMachine.cpp  AnimStateMachine.h  Blackboard.h  Blend1D.cpp  Blend1D.h  FootIK.cpp  FootIK.h  Json.cpp  Json.h  Molang.cpp  Molang.h  PlayerAnimator.cpp  PlayerAnimator.h  Pose.cpp  Pose.h  Rig.cpp  Rig.h
src/core/: Camera.cpp  Camera.h  FileDialog.cpp  FileDialog.h  GameTime.h  KeyBinds.cpp  KeyBinds.h  Lang.cpp  Lang.h  Paths.cpp  Paths.h  Settings.cpp  Settings.h  SystemStats.cpp  SystemStats.h  ThreadPool.cpp  ThreadPool.h  Weather.h  Window.cpp  Window.h
src/game/: Drops.cpp  Drops.h  Inventory.h  Mining.cpp  Mining.h  Player.cpp  Player.h  PlayerModel.cpp  PlayerModel.h  PlayerSkin.cpp  PlayerSkin.h  Recipes.cpp  Recipes.h  Session.cpp  Session.h
src/gfx/: GpuBuffer.cpp  GpuBuffer.h  HeldItemRenderer.cpp  HeldItemRenderer.h  ModelRenderer.cpp  ModelRenderer.h  PanoramaRenderer.cpp  PanoramaRenderer.h  PlayerPreview.cpp  PlayerPreview.h  Renderer.cpp  Renderer.h  SkyRenderer.cpp  SkyRenderer.h  Swapchain.cpp  Swapchain.h  TextureArray.cpp  TextureArray.h  UIRenderer.cpp  UIRenderer.h  VkContext.cpp  VkContext.h  WeatherRenderer.cpp  WeatherRenderer.h  stb_impl.cpp  vk_common.h  vma_impl.cpp
src/ui/: DebugOverlay.cpp  DebugOverlay.h  Font.cpp  Font.h  Hud.cpp  Hud.h  InventoryScreen.cpp  InventoryScreen.h  ItemIconRenderer.cpp  ItemIconRenderer.h  MenuScreen.cpp  MenuScreen.h
src/world/: Block.cpp  Block.h  BlockMesh.cpp  BlockMesh.h  BlockRegistry.cpp  BlockRegistry.h  Blocks.cpp  Blocks.h  Chunk.h  LodMesh.cpp  LodMesh.h  Mesher.cpp  Mesher.h  ModelDisplay.cpp  ModelDisplay.h  Noise.cpp  Noise.h  Raycast.cpp  Raycast.h  Section.h  World.cpp  World.h  WorldGen.cpp  WorldGen.h  WorldSave.cpp  WorldSave.h
tools/: CMakeLists.txt
tools/anim_studio/: main.cpp
